Fill Java/JVM/GarbageCollector
- what a GC is: JVMS 2.5.3 automatic storage management wording, tracing vs reference counting (JLS 12.6.1 reachability)
- Minor GC / Full GC: event taxonomy per GC Tuning Guide (minor = young only, major = entire heap), 98%/2% OutOfMemoryError guard
- collectors catalogue (Java 21): Serial, Parallel, G1 (default since 9, JEP 248), ZGC (+ZGenerational, JEP 439); CMS removed in 14 (JEP 363); ergonomics defaults
- Serial GC algorithm: eden+survivor copying with aging, old gen mark-sweep-compact
- developer control: heap/generation/collector flags (JVMS 2.5.3 allows sizing control), ergonomics 1/64 and 1/4 of RAM, System.gc() semantics
- remove 3 duplicate drafts subsumed by filled cards (JVM memory regions, Young/Old generations, generic GC-works); redirect 8 inbound links